<resources>
<string name="app_name">TakeAway</string>
<string name="takeaway_game">TakeAway Game</string>
<string name="takeaway_description">Choose one of the four selections to the right to indicate how many piles of coins you would like in the game. Take as many coins as you like from one pile per turn until there are no more coins in any pile. The last one to take coins wins!</string>
<string name="start_game">Start Game</string>
<string name="reset_quiz">Reset Game</string>
<string name="two_piles">2 piles of coins</string>
<string name="four_piles">4 piles of coins</string>
<string name="six_piles">6 piles of coins</string>
<string name="eight_piles">8 piles of coins</string>
<string name="pile1">- Pile One -\n{ %1$d }</string>
<string name="pile2">- Pile Two -\n{ %1$d }</string>
<string name="pile3">- Pile Three -\n{ %1$d }</string>
<string name="pile4">- Pile Four -\n{ %1$d }</string>
<string name="pile5">- Pile Five -\n{ %1$d }</string>
<string name="pile6">- Pile Six -\n{ %1$d }</string>
<string name="pile7">- Pile Seven -\n{ %1$d }</string>
<string name="pile8">- Pile Eight -\n{ %1$d }</string>
<string name="finish_turn">Finish Turn</string>
<string name="input_description">Enter the number of coins here</string>
<string name="player_turn">Player %1$d\'s turn</string>
<string name="number_of_piles">Number of Piles</string>
<string name="number_of_piles_description">Display 2,4,6, or 8 piles of coins</string>
<string name="action_settings">Settings</string>
<string name="choose_different_pile">Choose different pile</string>
    </resources>